# MiniFSD

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/images/spawn_map/: spawn_points_0_80.csv
configs/: inner_city_routes.yaml
scripts/: analyze_dataset.py  collect_data.py  collect_keyboard_data.py  drive_model.py  front_camera_demo.py  hello_carla.py  map_spawn_points.py  modular_camera_demo.py  scout_spawn_points.py  test_dataset_loader.py  train.py
scripts/dev/: run_carla_offscreen.sh
src/control/: keyboard_controller.py
src/dataset/: carla_dataset.py  recorder.py
src/inference/: steering_agent.py
src/models/: cnn.py
src/simulator/: camera_manager.py  carla_environment.py  vehicle_manager.py
